修改black list操作逻辑

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -788,6 +788,7 @@ label.cs-subform-label.date-title{
 }
 .sudden-change .table-box a{
   display: inline-block;
+  width: 100%;
 }
 .sudden-change .right-select .search-con{
   border: none;
