--- a/Front/src/assets/css/ts-offer-report.css
+++ b/Front/src/assets/css/ts-offer-report.css
@@ -2,9 +2,6 @@
 .ts-offer-report table.md-table.md-row-select th.md-column:first-child {
   padding: 0 12px 0 12px;
 }
-.ts-offer-report th.md-column.md-checkbox-column:first-child md-checkbox {
-  display: none;
-}
 .ts-offer-report md-checkbox .md-icon {
   margin-top: 0;
 }
@@ -54,4 +51,202 @@ table.md-table.md-row-select tbody.md-body>tr.md-row:not([disabled]):hover {
   margin: 0;
   padding: 0 5px 0 20px;
   font-weight: normal;
+}
+.checkbox-all-width {
+  min-width: 45px !important;
+  max-width: 45px !important;
+  width: 45px !important;
+}
+.ts-offer-report .offer-detail {
+  cursor: pointer;
+}
+
+md-checkbox-cus,md-checkbox-cus .md-container {
+    display: inline-block;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+md-card md-card-footer {
+    margin-top: auto;
+    padding: 16px
+}
+
+@media screen and (-ms-high-contrast:active) {
+    md-card {
+        border: 1px solid #fff
+    }
+}
+
+.md-image-no-fill>img {
+    width: auto;
+    height: auto
+}
+
+.md-inline-form md-checkbox-cus {
+    margin: 19px 0 18px
+}
+
+md-checkbox-cus {
+    margin: 0;
+    width: 20px;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: relative;
+    min-width: 20px;
+    min-height: 20px;
+    margin-left: 0;
+    margin-right: 16px
+}
+
+[dir=rtl] md-checkbox-cus {
+    margin-left: 16px;
+    margin-right: 0
+}
+
+md-checkbox-cus:last-of-type {
+    margin-left: 0;
+    margin-right: 0
+}
+
+md-checkbox-cus.md-focused:not([disabled]) .md-container:before {
+    left: -8px;
+    top: -8px;
+    right: -8px;
+    bottom: -8px
+}
+
+md-checkbox-cus.md-focused:not([disabled]):not(.md-checked) .md-container:before {
+    background-color: rgba(0,0,0,.12)
+}
+
+md-checkbox-cus.md-align-top-left>div.md-container {
+    top: 12px
+}
+
+md-checkbox-cus .md-container {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    left: 0;
+    right: auto
+}
+
+[dir=rtl] md-checkbox-cus .md-container {
+    left: auto;
+    right: 0
+}
+
+md-checkbox-cus .md-container:before {
+    box-sizing: border-box;
+    background-color: transparent;
+    border-radius: 50%;
+    content: '';
+    position: absolute;
+    display: block;
+    height: auto;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    width: auto
+}
+
+md-checkbox-cus .md-container:after {
+    box-sizing: border-box;
+    content: '';
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    bottom: -10px;
+    left: -10px
+}
+
+md-checkbox-cus .md-container .md-ripple-container {
+    position: absolute;
+    display: block;
+    width: auto;
+    height: auto;
+    left: -15px;
+    top: -15px;
+    right: -15px;
+    bottom: -15px
+}
+
+md-checkbox-cus.md-checked .md-icon:after,md-checkbox-cus.md-indeterminate .md-icon:after {
+    box-sizing: border-box;
+    position: absolute;
+    display: table;
+    content: ''
+}
+
+md-checkbox-cus .md-icon {
+    box-sizing: border-box;
+    -webkit-transition: 240ms;
+    transition: 240ms;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgba(0,0,0,0.54);
+    width: 18px;
+    height: 18px;
+}
+
+md-checkbox-cus.md-checked .md-icon {
+    border-color: transparent;
+    background-color: rgba(255,64,129,0.87);
+}
+
+md-checkbox-cus.md-checked .md-icon:after {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    left: 4.67px;
+    top: .22px;
+    width: 6.67px;
+    height: 13.33px;
+    border-width: 2px;
+    border-style: solid;
+    border-top: 0;
+    border-left: 0;
+    border-color: rgba(255,255,255,0.87);
+}
+
+md-checkbox-cus[disabled] {
+    cursor: default
+}
+
+md-checkbox-cus.md-indeterminate .md-icon:after {
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    width: 12px;
+    height: 2px;
+    border-width: 2px;
+    border-style: solid;
+    border-top: 0;
+    border-left: 0
+}
+
+md-checkbox-cus .md-label {
+    box-sizing: border-box;
+    position: relative;
+    display: inline-block;
+    white-space: normal;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+    margin-left: 30px;
+    margin-right: 0
 }
