--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1241,9 +1241,9 @@ table .traficc-source-input input[type="checkbox"]{
     padding-left: 10px;
     right: 20px;
 }
-.dollar-input{
+/*.dollar-input{
     padding-left: 20px;text-indent:15px;
-}
+}*/
 
 .left-con .cs-subform-select[disabled]{
     background: #eee;
