--- a/Front/src/assets/css/style.css
+++ b/Front/src/assets/css/style.css
@@ -132,9 +132,11 @@ body {
 .pricedesc p{line-height:20px;font-size:14px;margin:2px 0 5px 0;color:#000;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
 .pricedesc-list{border-top:1px solid #f3f3f3;margin:10px auto 0 auto;display:inline-block;width:100%;font-weight:500;height:210px;padding:0 10px;}
+.pricedesc-list.free-list {line-height: 1.2;}
 .pricedesc-list li{background:transparent;height:34px;font-size:13px;color:#000;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#eee;box-shadow:none;border-radius:0;display: table;vertical-align: middle;text-align:center;padding:10px 0;}
 .pricedesc-list li:hover{border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;}
 .pricedesc-list li i{margin:0 5px;color:#494949;}
+.pricedesc-list.free-list li {padding: 4px 0;line-height: 2;}
 .pricedesc-list .hg{line-height:normal;height:42px;}
 .pricedesc-list .hg em{font-size:20px;color:#999;}
 .p-btn{border-radius:3px;background:#357cf3;-webkit-transition-duration: 0.6s; /* Safari */
