--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -197,7 +197,7 @@ header .home:hover{
     background:#0055bf;
 }
 .navi ul.nav li.active a i,.navi ul.nav li.active a:hover i{color:#fff;}
-.navi ul.nav li a,li md-menu-bar .type-title{color:#fff;height:42px;line-height:42px;padding:0 17px;font-weight:bold;font-size:14px;}
+.navi ul.nav li a,li md-menu-bar .type-title{color:#fff;height:42px;line-height:42px;padding:0 15px;--font-weight:bold;font-size:12px;}
 .navi ul.nav li a:hover,li md-menu-bar .type-title:hover,li md-menu-bar md-menu.md-open>button,li md-menu-bar md-menu>button:focus{background:#0055bf;}
 .navi ul.nav li a i{color:#fff}
 .navi ul.nav li a:hover i{color:#fff}
@@ -634,7 +634,7 @@ table.md-table:not(.md-row-select) td.md-cell:nth-child(n+2):nth-last-child(n+2)
 table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+2) {
     padding:8px 15px 5px 12px;
 }
-table.md-table td.md-cell:last-child, table.md-table th.md-column:last-child{padding:0 0 0 12px;}
+table.md-table td.md-cell:last-child, table.md-table th.md-column:last-child{padding:0 12px}
 table.md-table th.md-column md-icon{min-width:12px;min-height:12px;font-weight:600;margin:-2px 0 0 0 ;}
 table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-icon{color:#2770ea}
 .md-table tfoot.md-body,table.md-table th.md-column{background: #e9e9e9;
@@ -695,7 +695,7 @@ md-sidenav.md-closed{
     display: inline;
 }
 .navi{
-    margin-top:46px;background:#2b67b4;
+    margin-top:46px;background:#4285f4;
 }
 .navi ul.nav li{
     float: left;
@@ -1280,18 +1280,30 @@ table .traficc-source-input input[type="checkbox"]{
     margin:0 0 0 -5px;
 }
 .view_column_con{
-    width:255px;
-    padding:0 0 15px 0;
+    width: 255px;
+    padding: 0 0 15px 0;
     position: absolute;
-    background:rgba(246, 248, 248, 0.97)!important;
-    filter:Alpha(opacity=97); background:#fff; /*　使用IE专属滤镜实现IE背景透明*/
-    top:40px;
-    right:0;
+    background: rgba(246, 248, 248, 0.97)!important;
+    background: #fff;
+    top: 48px;
+    right: 0;
     z-index: 25;
     border-radius:3px;
-    box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
-    0 1px 1px 0 rgba(0, 0, 0, 0.1),
-    0 1px 1px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+}
+.view_column_con:after, .view_column_con:before {
+  position: absolute;
+  display: inline-block;
+  border-bottom-color: rgba(0, 0, 0, 0.1);
+  content: '';
+  top: -7px;
+  right: 64px;
+  border-right: 7px solid transparent;
+  border-left: 7px solid transparent;
+  border-bottom: 7px solid rgba(246, 248, 248, 0.97);
+}
+.view_column_con:after {
+  top: -6px;
 }
 .view_column_con ul{
     padding:0 ;
@@ -2886,7 +2898,16 @@ table.md-table tbody.md-body > tr.md-row span {white-space: nowrap;}
 .md-table-pagination > .buttons > .md-button.md-icon-button{margin:0 0 0 10px;}
 md-icon.md-default-theme, md-icon{color:#fff;}
 .md-button.md-icon-button{border-radius:3px;height:32px;width:32px;padding:0;background:#8494a2 !important;border:1px solid #8494a2;color:#fff;}
-.md-button.md-default-theme.md-accent[disabled], .md-button.md-accent[disabled], .md-button.md-default-theme.md-fab[disabled], .md-button.md-fab[disabled], .md-button.md-default-theme.md-raised[disabled], .md-button.md-raised[disabled], .md-button.md-default-theme.md-warn[disabled], .md-button.md-warn[disabled], .md-button.md-default-theme[disabled], .md-button[disabled]{background:transparent !important;/*border:1px solid #e1e1e1;*/}
+.md-button.md-default-theme.md-accent[disabled],
+.md-button.md-accent[disabled],
+.md-button.md-default-theme.md-fab[disabled],
+.md-button.md-fab[disabled],
+.md-button.md-default-theme.md-raised[disabled],
+.md-button.md-raised[disabled],
+.md-button.md-default-theme.md-warn[disabled],
+.md-button.md-warn[disabled],
+.md-button.md-default-theme[disabled],
+.md-button[disabled]{background:transparent !important;/*border:1px solid #e1e1e1;*/}
 .md-primary.disabled-btn[disabled]{background:#48545f !important;color:#79828a;max-height:32px;line-height:32px;border-radius: 3px;}
 .referral-group{margin:40px 0;}
 .referral-group .col-sm-6{padding:0;}
@@ -3340,7 +3361,7 @@ ul.breadcrumb{
     margin-bottom: 0;
 }
 .breadcrumb-div{
-    margin-bottom: 20px;
+    --margin-bottom: 20px;
 }
 .radio-inline, .checkbox-inline{line-height:22px;padding:15px 0 0 20px;}
 md-checkbox .md-icon{width:18px;height:18px;border-radius:2px;margin-top:17px;}
@@ -3557,7 +3578,12 @@ md-menu-content[width="3"].flows-menu-box {
   background: #12B610!important;
 }
 
-.toolbelt-bar {padding: 4px 15px;display: flex;-webkit-justify-content:space-between;justify-content:space-between;}
+.table-box .td-checkbox {border-right: 1px rgba(0, 0, 0, 0.12) solid;}
+.table-box .check-all {margin: 0;}
+
+.sticky.toolbelt-bar-box {border-bottom: 1px solid rgba(0, 0, 0, 0.12);}
+
+.toolbelt-bar {padding: 0 15px;display: flex;-webkit-justify-content:space-between;justify-content:space-between;}
 .toolbelt-bar .right-panel, .toolbelt-bar .left-panel {display: flex;position: relative;align-items: center;white-space: nowrap;}
 .toolbelt-bar .right-panel > i {color: rgba(0, 0, 0, 0.54);width: 48px;height: 48px;line-height: 48px;text-align: center;font-size: 18px;}
 .toolbelt-bar .right-panel > i:hover {color: rgba(0, 0, 0, 0.87)}
@@ -3567,13 +3593,20 @@ md-menu-content[width="3"].flows-menu-box {
 .toolbelt-bar .right-panel md-input-container.md-icon-left input {padding-left: 36px;}
 .toolbelt-bar .right-panel md-input-container .md-errors-spacer {display: none;}
 .toolbelt-bar .right-panel md-input-container.md-input-focused md-icon{color: rgb(33,150,243);}
+.toolbelt-bar .right-panel .date-picker {width: 150px;margin-right: 20px;}
+.toolbelt-bar .right-panel md-input-container {margin: 15px 0;}
+.toolbelt-bar.secondary-toolbelt {background: #4285f4;color: #fff;height: 64px;}
+.toolbelt-bar.secondary-toolbelt md-icon {cursor: pointer;}
+.toolbelt-bar .icon-text {display: flex;height: 48px;}
+.toolbelt-bar .icon-text .line {height: 48px; margin: 0 15px; background: rgba(255, 255, 255, 0.7);width: 1px;}
+.toolbelt-bar .edit-selected-items-button {display: flex;align-items: center;cursor: pointer;}
 
 .filter-bar {display: flex; padding: 0 15px;border-bottom: 1px solid rgba(0, 0, 0, 0.12);}
 .filter-bar .predicates-container, .filter-bar .main-wrapper {display: flex; width: 100%;}
 .filter-bar .predicates-container {flex-wrap: wrap;}
 .filter-bar .menu-suggest-input {flex: 1;}
 .filter-bar .menu-suggest-input input {width: 100%;}
-.filter-bar .header {height: 48px;display: flex;align-items: center;padding-right: 10px;}
+.filter-bar .header {height: 48px;display: flex;align-items: center;padding-right: 10px;width: 70px;}
 .filter-bar .md-chip {cursor: pointer;background: #4285f4;color: #fff;height: 32px;line-height: 32px;border-radius: 16px;padding: 0 15px;margin: 8px 8px 0 0;}
 .filter-bar .md-chip:hover{background: #3367d6}
 .filter-bar .menu-suggest-input input{height: 32px;margin-top: 8px; border: 0;}
@@ -3585,7 +3618,12 @@ md-menu-content[width="3"].flows-menu-box {
 .material-list {box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2); border-radius: 2px;flex-grow: 1;flex-shrink: 1;flex-basis: auto;overflow-y: auto;transition: inherit;max-height: calc(50vh - 120px);background: #fff;border-radius: 2px;min-width: 200px;}
 .material-list .menu-item-label {flex: 1;}
 .material-list .material-select-item i{color: rgba(0, 0, 0, 0.54)}
-.material-list .material-select-item i:hover{color: rgba(0, 0, 0, 0.87)}
+.material-list .material-select-item i.enable {color: #0f9d58;}
+.material-list .material-select-item i.remove {color: #c53929;}
+.material-list .material-select-item i:hover{color: rgba(0, 0, 0, 0.87);}
+.edit-selected-items-button-menu-box .material-select-item span {display: flex;align-items: center;}
+.edit-selected-items-button-menu-box .material-select-item span i {margin-right: 8px;}
+
 .material-list .group-label {display: block;padding: 0 24px;position: relative;white-space: nowrap;font-size: 12px;font-weight: 400;color: rgba(0, 0, 0, 0.54);height: 24px;line-height: 24px;}
 .material-list .group:not(.empty):not(:first-child) {border-top: 1px solid #e0e0e0;margin-top: 7px; padding-top: 8px;}
 .material-list .material-select-item {display: block;font-family: inherit;font-size: 15px;line-height: 32px;padding: 0 24px;position: relative;white-space: nowrap;display: flex;align-items: center;color: rgba(0, 0, 0, 0.87);cursor: pointer;outline: none;}
@@ -3598,13 +3636,6 @@ md-menu-content[width="3"].flows-menu-box {
 .notifications-bar .notification-bar-content {display: flex;flex-grow: 1;align-items: center;justify-content:center;}
 .notifications-bar .notification-text {align-items: center;color: #fff;line-height: 16px;}
 .notifications-bar .actions {flex-shrink: 0;cursor: pointer;}
-
-
-
-
-
-
-
 
 
 
