--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -192,15 +192,30 @@ header .home:hover{
     margin-top: 8px;
 }
 .navi ul.nav li.active a, .navi ul.nav li.active > md-menu-bar {
-    font-weight:600;
-    color:#fff;
-    background:#0055bf;
+  color: #4285f4;
+  border-bottom: 3px solid #4285f4;
+  font-weight: 500;
+  background: transparent;
 }
-.navi ul.nav li.active a i,.navi ul.nav li.active a:hover i{color:#fff;}
-.navi ul.nav li a,li md-menu-bar .type-title{color:#fff;height:42px;line-height:42px;padding:0 15px;--font-weight:bold;font-size:12px;}
-.navi ul.nav li a:hover,li md-menu-bar .type-title:hover,li md-menu-bar md-menu.md-open>button,li md-menu-bar md-menu>button:focus{background:#0055bf;}
-.navi ul.nav li a i{color:#fff}
-.navi ul.nav li a:hover i{color:#fff}
+.navi ul.nav li.active a:hover::after, .navi ul.nav li.active > md-menu-bar:hover::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: currentColor;
+  opacity: .12;
+  border-radius: inherit;
+  pointer-events: none;
+}
+
+.navi ul.nav li.active a i, .navi ul.nav li.active a:hover i {color: #4285f4;}
+.navi ul.nav li a,li md-menu-bar .type-title{color: #616161;height:42px;line-height:42px;padding:0 10px;font-weight: 500;font-size:12px;}
+.navi ul.nav li a:hover,li md-menu-bar .type-title:hover,li md-menu-bar md-menu.md-open>button,li md-menu-bar md-menu>button:focus{--background:#0055bf;}
+.navi ul.nav li a i {color: #616161}
+.navi ul.nav li a:hover i{--color:#fff}
 .nav-icon {
     margin-top: 5px;
 }
@@ -632,32 +647,30 @@ table.md-table.md-row-select th.md-column:nth-child(n+3):nth-last-child(n+2) {
 }
 table.md-table:not(.md-row-select) td.md-cell:nth-child(n+2):nth-last-child(n+2),
 table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+2) {
-    padding:8px 15px 5px 12px;
+    padding: 2px 12px 2px 12px;
 }
 table.md-table td.md-cell:last-child, table.md-table th.md-column:last-child{padding:0 12px}
-table.md-table th.md-column md-icon{min-width:12px;min-height:12px;font-weight:600;margin:-2px 0 0 0 ;}
+table.md-table th.md-column md-icon{min-width:12px;min-height:12px;font-weight:600;margin:-2px 0 0 0;}
+table.md-table th.md-column md-icon.md-sort-icon {color: #fff;}
 table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-icon{color:#2770ea}
-.md-table tfoot.md-body,table.md-table th.md-column{background: #e9e9e9;
-    background: -moz-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #e9e9e9), color-stop(100%, #e9e9e9));
-    background: -webkit-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
-    background: -o-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
-    background: -ms-linear-gradient(top, #f8f8f8 0, #e9e9e9 100%);
-    background: linear-gradient(to bottom, #f8f8f8 0, #e9e9e9 100%);
-    color:#000;font-weight:bold;}
-.md-table tfoot.md-body{line-height:20px;border-top:1px solid #d7d7d7;}
-.md-table tfoot.md-body td{border-right:1px solid #d7d7d7;}
-table.md-table th.md-column {
-    border-right:1px solid #d7d7d7;
+.md-table tfoot.md-body,table.md-table th.md-column{
+  background: #4285f4;
+  color: #fff;
+  font-weight: bold;
 }
-
-table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-icon{color:#000;font-weight:800;}
+.md-table tfoot.md-body {line-height:20px;border-top:1px solid #d7d7d7;}
+.md-table tfoot.md-body td{border-right:1px solid #d7d7d7;color: #fff;}
+table.md-table th.md-column {
+  border-right: 1px solid #d7d7d7;
+}
+table.md-table th.md-column.md-active, table.md-table th.md-column.md-active md-icon{color:#fff;font-weight:800;}
 table.md-table thead.md-head > tr.md-row{
     height: auto;
 }
 table.md-table td.md-cell{
-    border-left: 1px solid #eaeaea;
-    border-top: none;font-size:12px;
+  border-left: 1px solid #eaeaea;
+  border-top: none;
+  font-size: 12px;
 }
 table.md-table td.md-cell.tree-level-2 {padding-left: 25px !important;}
 table.md-table tbody{border-top:1px solid #ccc;}
@@ -671,10 +684,11 @@ table tbody tr{background: #fff;}
 table tbody tr:nth-child(2n+2){background:#fff;border-width:1px 0 1px 0;border-color:#ededed;border-style:solid;}
 table.md-table:not(.md-row-select) td.md-cell:first-child, table.md-table:not(.md-row-select) th.md-column:first-child{padding:4px 10px 0 10px;}
 table{border-radius:0;float:left;width:100%;height:auto;}
-md-table-container {overflow-y:auto;border-radius:0;float:left;width:100%;background:#f6f8f8;min-height: 100px;transform: translate(0,0);-ms-transform:translate(0,0); 	/* IE 9 */
--moz-transform:translate(0,0); 	/* Firefox */
--webkit-transform:translate(0,0); /* Safari 和 Chrome */
--o-transform:translate(0,0); 	}
+md-table-container {overflow-y:auto;border-radius:0;float:left;width:100%;background:#f6f8f8;min-height: 100px;transform: translate(0,0);}
+md-table-container::-webkit-scrollbar-track-piece{background-color:#fff;}
+md-table-container::-webkit-scrollbar{width: 3px;height: 3px;}
+md-table-container::-webkit-scrollbar-thumb{background:#888;}
+
 .table-box{border:1px solid #d7d7d7;border-radius:3px;width:100%;float:left;}
 
 .md-table-pagination{color:#000;}
@@ -694,8 +708,9 @@ md-table-container {overflow-y:auto;border-radius:0;float:left;width:100%;backgr
 md-sidenav.md-closed{
     display: inline;
 }
-.navi{
-    margin-top:46px;background:#4285f4;
+.navi {
+  margin-top: 46px;
+  background: #fff;
 }
 .navi ul.nav li{
     float: left;
@@ -1162,7 +1177,7 @@ table .traficc-source-input input[type="checkbox"]{
 /*    width: 78%;
     float: left;*/
 }
-.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:20px;width:20px;height:20px;display:block;float:left;margin:0 0 0 -17px;}
+.rd{background:url("../../assets/img/3rd.png") no-repeat;background-size:20px;width:20px;height:20px;display:block;float:left;margin:0 0 0 -9px;}
 .report .right-select{
     float: right;
 }
@@ -2368,7 +2383,7 @@ input[type="checkbox"].th-checkbox{
     color: #fff;
 }
 md-content.cs-main-content{
-    height: calc(100% - 88px);
+    height: calc(100% - 136px);
 }
 @media (max-width:1340px){
     md-content.cs-main-content{height: calc(100% - 130px);}
@@ -3001,17 +3016,8 @@ md-select.md-default-theme[disabled] .md-select-value, md-select[disabled] .md-s
 md-select-menu.md-default-theme md-option[selected], md-select-menu md-option[selected]{color:#000;}
 md-select-menu.md-default-theme md-option[selected]:hover, md-select-menu md-option[selected]:hover,md-select-menu md-option[selected]:focus{background:#c9c9cf;color:#000;}
 table.md-table thead.md-head > tr.md-row{height: 30px;}
-/*table.md-table tbody.md-body > tr.md-row, table.md-table tfoot.md-foot > tr.md-row{height:33px;}*/
-/*md-option{height:33px;background:#f6f6f6;}*/
-/*md-option:hover{background:#e6ebf0;}*/
-/*md-option .md-text{font-size:14px;color:#333;}*/
-/*.layout-column > .flex, .layout-sm-column > .flex{margin:0;}*/
-/*.navbar-right .dropdown-menu{top:54px;right:-1px;}*/
-/*.dropdown-menu{padding:0;}*/
-/*.data-list-col {12px;font-weight: 600;}*/
-/*.md-select-value .md-select-icon{margin:2px 4px;}*/
-/*md-dialog .md-dialog-content{padding:50px;}*/
-table.md-table tbody.md-body > tr.md-row, table.md-table tfoot.md-foot > tr.md-row{height:33px;}
+
+table.md-table tbody.md-body > tr.md-row, table.md-table tfoot.md-foot > tr.md-row{height:30px;}
 .layout-column > .flex, .layout-sm-column > .flex{background:#fff;}
 .navbar-right .dropdown-menu{top:46px;right:0;padding:0;border-radius:4px;overflow:hidden;}
 .w{min-width: 200px;width:auto;}
@@ -3454,6 +3460,7 @@ table.md-table tr.row-deleted td.md-cell {
 .repeater-container tr .item-name {
   position: relative;
 }
+.repeater-container tr .item-name span {display: flex;}
 .repeater-container tr .item-name a {
   color: #357CF4;
   border: 1px solid transparent;
@@ -3607,8 +3614,8 @@ md-menu-content[width="3"].flows-menu-box {
 .filter-bar .menu-suggest-input {flex: 1;}
 .filter-bar .menu-suggest-input input {width: 100%;}
 .filter-bar .header {height: 48px;display: flex;align-items: center;padding-right: 10px;width: 70px;}
-.filter-bar .md-chip {cursor: pointer;background: #4285f4;color: #fff;height: 32px;line-height: 32px;border-radius: 16px;padding: 0 15px;margin: 8px 8px 0 0;}
-.filter-bar .md-chip:hover{background: #3367d6}
+.filter-bar .md-chip {cursor: pointer;background: #8494a2;color: #fff;height: 32px;line-height: 32px;border-radius: 16px;padding: 0 15px;margin: 8px 8px 0 0;}
+.filter-bar .md-chip:hover{opacity: .8;}
 .filter-bar .menu-suggest-input input{height: 32px;margin-top: 8px; border: 0;}
 .filter-bar .buttons-wrapper {display: flex;}
 .filter-bar .save-filter, .filter-bar .remove-filter {width: 48px;height: 48px;line-height: 48px;font-size: 18px;text-align: center;color: #757575;cursor: pointer;}
